@@ -2,7 +2,9 @@
 
     * src/functions/geda_container.c: Revise get_allocation_coords to utilize
       gtk_widget_get_allocation. Revise function find_old_focus to utilize
-      accessor gtk_container_get_focus_child and eliminate use of goto.
+      accessor gtk_container_get_focus_child and eliminate use of goto. Revise
+      old_focus_coords to verify the toplevel has focus, otherwise focus_widget
+      is not valid.
 
 2020-01-09 Wiley E. Hill <wileyhill@gmail.com>
 
